[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/vole_theme.tres" type="Theme" id=1]
[ext_resource path="res://Themes/fonts/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 76.0, 400.0 ],
"_edit_vertical_guides_": [ 400.0, 950.0 ]
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 0.8, 1 )

[node name="WelcomeText" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -495.0
margin_top = -222.0
margin_right = -146.0
margin_bottom = -126.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Welcome [USER]"
align = 1
autowrap = true
uppercase = true

[node name="ClassroomBtn" type="Button" parent="ColorRect"]
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -101.76
margin_top = 155.0
margin_right = 148.24
margin_bottom = 205.0
text = "My Classroom"

[node name="VoleBtn" type="Button" parent="ColorRect"]
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = 199.24
margin_top = 154.0
margin_right = 449.24
margin_bottom = 204.0
text = "Vole Simulator"

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -223.0
margin_right = 438.0
margin_bottom = 100.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
text = " [Placeholder text]"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="ColorRect/ClassroomBtn" to="." method="_on_ClassroomBtn_pressed"]
[connection signal="pressed" from="ColorRect/VoleBtn" to="." method="_on_VoleBtn_pressed"]
